--- a/CarShowroomApp/CarShowroomApp.csproj
+++ b/CarShowroomApp/CarShowroomApp.csproj
@@ -7,6 +7,11 @@
   <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200619212530_AddDataAnnotations.cs" />
+    <Compile Remove="Migrations\20200619212530_AddDataAnnotations.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
