--- a/CarShowroomFront/angular.json
+++ b/CarShowroomFront/angular.json
@@ -119,6 +119,10 @@
               "devServerTarget": "CarShowroomFront:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
