--- a/CarShowroomBackEnd/CarShowroom.Application/CarShowroom.Application.csproj
+++ b/CarShowroomBackEnd/CarShowroom.Application/CarShowroom.Application.csproj
@@ -5,9 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
     <Folder Include="ViewModels\" />
-    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CarShowroom.Domain\CarShowroom.Domain.csproj" />
   </ItemGroup>
 
 </Project>
