--- a/CarShowroomBackEnd/CarShowroomApp.UI/CarShowroom.UI.csproj
+++ b/CarShowroomBackEnd/CarShowroomApp.UI/CarShowroom.UI.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CarShowroom.Application\CarShowroom.Application.csproj" />
+    <ProjectReference Include="..\CarShowroom.Domain\CarShowroom.Domain.csproj" />
     <ProjectReference Include="..\CarShowroom.Infra.Data\CarShowroom.Infra.Data.csproj" />
   </ItemGroup>
 
