--- a/CarShowroomBackEnd/CarShowroom.Infra.Data/CarShowroom.Infra.Data.csproj
+++ b/CarShowroomBackEnd/CarShowroom.Infra.Data/CarShowroom.Infra.Data.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200906213842_ini.cs" />
+    <Compile Remove="Migrations\20200906213842_ini.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
