--- a/CarShowroomBackEnd/CarShowroom.Infra.Data/CarShowroom.Infra.Data.csproj
+++ b/CarShowroomBackEnd/CarShowroom.Infra.Data/CarShowroom.Infra.Data.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200906213842_ini.cs" />
     <Compile Remove="Migrations\20200906213842_ini.Designer.cs" />
+    <Compile Remove="Migrations\20200907115948_Ini.cs" />
+    <Compile Remove="Migrations\20200907115948_Ini.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
