--- a/CarShowroomBackEnd/CarShowroomApp.UI/CarShowroom.UI.csproj
+++ b/CarShowroomBackEnd/CarShowroomApp.UI/CarShowroom.UI.csproj
@@ -15,7 +15,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.OpenApi" Version="1.2.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
