--- a/CarShowroomBackEnd/CarShowroomApp.UI/CarShowroom.UI.csproj
+++ b/CarShowroomBackEnd/CarShowroomApp.UI/CarShowroom.UI.csproj
@@ -23,8 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CarShowroom.Application\CarShowroom.Application.csproj" />
-    <ProjectReference Include="..\CarShowroom.Domain\CarShowroom.Domain.csproj" />
-    <ProjectReference Include="..\CarShowroom.Infra.Data\CarShowroom.Infra.Data.csproj" />
+    <ProjectReference Include="..\CarShowroom.Infra.IoC\CarShowroom.Infra.IoC.csproj" />
   </ItemGroup>
 
 
