--- a/CarShowroomBackEnd/CarShowroom.Application/CarShowroom.Application.csproj
+++ b/CarShowroomBackEnd/CarShowroom.Application/CarShowroom.Application.csproj
@@ -9,6 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.7.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CarShowroom.Domain\CarShowroom.Domain.csproj" />
   </ItemGroup>
 
