--- a/CarShowroomBackEnd/CarShowroom.Application/CarShowroom.Application.csproj
+++ b/CarShowroomBackEnd/CarShowroom.Application/CarShowroom.Application.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.7.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
   </ItemGroup>
