Add SignlR, Message model

--- a/CarShowroomBackEnd/CarShowroomApp.UI/appsettings.json
+++ b/CarShowroomBackEnd/CarShowroomApp.UI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=den1.mssql8.gear.host;Database=carshowroomgkf;Trusted_Connection=False;MultipleActiveResultSets=True;User Id=carshowroomgkf;Password=Wt13iyx!1~v"
+    "DefaultConnection": "Server=den1.mssql8.gear.host;Database=carshowroomgkf;Trusted_Connection=False;MultipleActiveResultSets=True;User Id=carshowroomgkf;Password=Wt13iyx!1~vv"
   },
   "Logging": {
     "LogLevel": {
