add redis caching conf

--- a/CarShowroomBackEnd/CarShowroomApp.UI/appsettings.json
+++ b/CarShowroomBackEnd/CarShowroomApp.UI/appsettings.json
@@ -13,6 +13,10 @@
   "Jwt": {
     "Key": "This is my secret key",
     "Issuer": "test.com",
-    "ExpireMinutes":  120
+    "ExpireMinutes": 120
+  },
+  "RedisCacheSettings": {
+    "Enabled": true,
+    "ConnectionString":  "localhost"
   }
 }
