add cachedattribute and register service

--- a/CarShowroomBackEnd/CarShowroomApp.UI/appsettings.json
+++ b/CarShowroomBackEnd/CarShowroomApp.UI/appsettings.json
@@ -17,6 +17,6 @@
   },
   "RedisCacheSettings": {
     "Enabled": true,
-    "ConnectionString":  "localhost"
+    "ConnectionString":  "localhost,6379"
   }
 }
