set redis cache settings enabled to false

--- a/CarShowroomBackEnd/CarShowroomApp.UI/appsettings.json
+++ b/CarShowroomBackEnd/CarShowroomApp.UI/appsettings.json
@@ -16,7 +16,7 @@
     "ExpireMinutes": 120
   },
   "RedisCacheSettings": {
-    "Enabled": true,
+    "Enabled": false,
     "ConnectionString":  "localhost,6379"
   }
 }
