--- a/CarShowroomFrontEnd/package.json
+++ b/CarShowroomFrontEnd/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@aspnet/signalr": "^1.1.4",
     "jwt-decode": "^3.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
