--- a/CarShowroomFrontEnd/package.json
+++ b/CarShowroomFrontEnd/package.json
@@ -24,6 +24,7 @@
     "@aspnet/signalr": "^1.1.4",
     "jwt-decode": "^3.0.0",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^10.10.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
