Add redis hosting

--- a/CarShowroomBackEnd/CarShowroomApp.UI/appsettings.json
+++ b/CarShowroomBackEnd/CarShowroomApp.UI/appsettings.json
@@ -16,7 +16,7 @@
     "ExpireMinutes": 120
   },
   "RedisCacheSettings": {
-    "Enabled": false,
-    "ConnectionString":  "localhost,6379"
+    "Enabled": true,
+    "ConnectionString": "redis-12383.c135.eu-central-1-1.ec2.cloud.redislabs.com:12383,password=iFWFT97IfPRxJQphrdvhgNOofytdUkpb"
   }
 }
