--- a/CarShowroomBackEnd/CarShowroom.Domain/CarShowroom.Domain.csproj
+++ b/CarShowroomBackEnd/CarShowroom.Domain/CarShowroom.Domain.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="3.1.0" />
+    <PackageReference Include="MongoDB.Bson" Version="2.11.5" />
   </ItemGroup>
 
   <ItemGroup>
