--- a/CarShowroomBackEnd/CarShowroom.Infra.Data/CarShowroom.Infra.Data.csproj
+++ b/CarShowroomBackEnd/CarShowroom.Infra.Data/CarShowroom.Infra.Data.csproj
@@ -25,6 +25,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="MongoDB.Bson" Version="2.11.5" />
+    <PackageReference Include="MongoDB.Driver" Version="2.11.5" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.11.5" />
   </ItemGroup>
 
   <ItemGroup>
