--- a/CarShowroomBackEnd/CarShowroomApp.UI/appsettings.json
+++ b/CarShowroomBackEnd/CarShowroomApp.UI/appsettings.json
@@ -18,5 +18,10 @@
   "RedisCacheSettings": {
     "Enabled": true,
     "ConnectionString": "redis-12383.c135.eu-central-1-1.ec2.cloud.redislabs.com:12383,password=iFWFT97IfPRxJQphrdvhgNOofytdUkpb"
+  },
+  "CarShowroomMongoSettings": {
+    "ClientsCollectionName": "Clients",
+    "ConnectionString": "mongodb+srv://admin:eHXiUL2N9ZwVQE0y@cluster-carshowroom.849ac.mongodb.net/CarShowroom?retryWrites=true&w=majority",
+    "DatabaseName": "CarShowroom"
   }
 }
