--- a/.github/workflows/aspnetcore.yml
+++ b/.github/workflows/aspnetcore.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 3.1.x
     - name: Restore dependencies
-      working-directory: ./CarShowroomApp.UI
+      working-directory: /home/runner/work/CarShowroomApp/CarShowroomApp/CarShowroomBackEnd/CarShowroomApp.UI/
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
