--- a/CarShowroomBackEnd/CarShowroomApp.Tests/CarShowroom.UI.Tests.csproj
+++ b/CarShowroomBackEnd/CarShowroomApp.Tests/CarShowroom.UI.Tests.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+	  <MainEntryPoint>CarShowroom.UI.Tests.PerformanceTests.Program</MainEntryPoint>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
