--- a/CarShowroomBackEnd/CarShowroom.Offers.API/CarShowroom.Offers.Consumer/CarShowroom.Offers.Consumer.csproj
+++ b/CarShowroomBackEnd/CarShowroom.Offers.API/CarShowroom.Offers.Consumer/CarShowroom.Offers.Consumer.csproj
@@ -8,9 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CarShowroom.Messages\CarShowroom.Messages.csproj" />
     <ProjectReference Include="..\CarShowroom.Offers.Domain\CarShowroom.Offers.Domain.csproj" />
   </ItemGroup>
 
